@@ -3,6 +3,8 @@ Version: 0.17.18
 Date: 2019.11.21
   Balanced:
     - Krastorio computer recipes
+  Add:
+    - Increase use of Menarite and Imersite
 ---------------------------------------------------------------------------------------------------
 Version: 0.17.17
 Date: 2019.11.21
